readme + eq correction

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,4 @@ knitr::opts_chunk$set(
 
 # Sodium silicate and hexametaphosphate promote the release of (oxyhydr)oxide nanoparticles from corroding iron  
 
-This repository contains the R code and other materials for the paper "Sodium silicate and hexametaphosphate promote the release of (oxyhydr)oxide nanoparticles from corroding iron" (soon to be available as a preprint). 
-
-<!-- When rendering the .Rmd file, run `R/render_paper.R` to get the proper formatting for Arabic numeral citations. -->
+This repository contains the R code and other materials for the paper "Sodium silicate and hexametaphosphate promote the release of (oxyhydr)oxide nanoparticles from corroding iron" (soon to be available as a preprint). When rendering the .Rmd file, run `R/render_paper.R` to get the proper formatting for Arabic numeral citations.
