--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -780,3 +780,19 @@
     note = {R package version 0.1.1},
     url = {https://CRAN.R-project.org/package=ggtext},
   }
+
+@article{petteys_characterization_1998,
+	title = {Characterization of hematite and its interaction with humic material using flow field-flow fractionation},
+	volume = {816},
+	issn = {00219673},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0021967398004762},
+	doi = {10.1016/S0021-9673(98)00476-2},
+	language = {en},
+	number = {2},
+	urldate = {2022-06-24},
+	journal = {Journal of Chromatography A},
+	author = {Petteys, Mark P and Schimpf, Martin E},
+	month = aug,
+	year = {1998},
+	pages = {145--158},
+}
