writing & new figure

--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -796,3 +796,11 @@
 	year = {1998},
 	pages = {145--158},
 }
+
+@online{here,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
