--- a/Rmarkdown/paper.Rmd
+++ b/Rmarkdown/paper.Rmd
@@ -114,15 +114,15 @@ radii %>%
   summarize(across(c(rg_zimm, d_geom), median))
 ```
 
-Sequestrants such as polyphosphate and sodium silicate are used widely to control iron precipitation in drinking water, but less is known about their impact on iron corrosion scale. Here we characterize the nanoparticulate iron (oxyhydr)oxide suspensions that result from corroding cast iron coupons in solutions containing either sodium hexametaphosphate (3 mg P L^-1^) or sodium silicate (100 mg SiO~2~ L^-1^). We determined the elemental composition and size distribution of these suspensions using flow field-flow fractionation with ultraviolet, multielement, and multiangle light scattering detection (FFF-UV-MALS-ICP-MS). Both sequestrants yielded stable iron suspensions, and the pooled median radius of gyration at peak ^57^Fe intensity was 22 nm, corresponding to a sphere-equivalent geometric diameter of 57 nm. The median Feret diameter and ASTM roundness was `r abs_summ$Feret_med` nm and `r abs_summ$r_med`, respectively, as determined determined by transmission electron microscopy. Lead associated readily with iron nanoparticles, and in the hexametaphosphate suspension it associated preferentially with iron over free hexametaphosphate. Sequestrants then, may interact with iron corrosion scale to yield effective transport vectors for lead in drinking water systems, even when complexation of free lead by the sequestrant is negligible.  
+Sequestrants such as polyphosphate and sodium silicate are used widely to control iron precipitation in drinking water, but less is known about their impact on iron corrosion scale. Here we characterize the nanoparticulate iron (oxyhydr)oxide suspensions that result from corroding cast iron coupons in solutions containing either sodium hexametaphosphate (3 mg P L^-1^) or sodium silicate (100 mg SiO~2~ L^-1^). We determined the elemental composition and size distribution of these suspensions using flow field-flow fractionation with ultraviolet, multielement, and multiangle light scattering detection (FFF-UV-MALS-ICP-MS). Both sequestrants yielded stable iron suspensions, and the pooled median radius of gyration at peak ^57^Fe intensity was 22 nm, corresponding to a sphere-equivalent geometric diameter of 57 nm. The median Feret diameter and ASTM roundness was `r abs_summ$Feret_med` nm and `r abs_summ$r_med`, respectively, as determined by transmission electron microscopy. Lead associated readily with iron nanoparticles, and in the hexametaphosphate suspension it associated preferentially with iron over free hexametaphosphate. Sequestrants then, may interact with iron corrosion scale to yield effective transport vectors for lead in drinking water systems, even when complexation of free lead by the sequestrant is negligible.  
 
 # Introduction  
 
 Polyphosphates and sodium silicates are used widely as drinking water additives, often to control aesthetic issues caused by iron from source water and pipe corrosion. These additives have been shown to decrease the colour and turbidity of iron suspensions [@robinson_effects_1987; @robinson_iron_1992; @lytle_effect_2002; @rahman_benchscale_2014; @li_understanding_2019]. They reduce particle size, alter morphology, and increase stability by imparting strongly negative zeta potentials [@magnuson_characterization_2001; @lytle_effect_2002; @rahman_benchscale_2014; @li_understanding_2019]. There is also evidence from laboratory studies that they control iron corrosion [@lahodny_sarc_influence_1981; @koudelka_nature_1982].
 
-Less is known about the effect of polyphosphate and sodium silicate on the release of iron from iron corrosion scale. In the short term, an elevated dose of sodium silicate (100 mg SiO~2~ L^-1^) may promote colloidal iron release from corroded iron water mains [@li_impact_2020], but little characterization of these colloids is available. The effect of polyphosphate on iron colloid release from corrosion scale is also unclear. Iron colloids are important vectors for trace element transport in drinking water systems, which is particularly relevant for controlling lead in drinking water [@trueman_understanding_2016; @trueman_characterizing_2019; @trueman_new_2016].
+Less is known about how polyphosphates and silicates impact iron release from corrosion scale. In the short term, an elevated dose of sodium silicate (100 mg SiO~2~ L^-1^) may promote colloidal iron release from corroded iron water mains [@li_impact_2020], but little characterization of these colloids is available. The effect of polyphosphate on iron colloid release from corrosion scale is also unclear. Iron colloids are important vectors for trace element transport in drinking water systems, which is particularly relevant for controlling lead in drinking water [@trueman_understanding_2016; @trueman_characterizing_2019; @trueman_new_2016].
 
-Here, we characterize the nanoparticulate iron released from corroding cast iron coupons in the presence of sodium hexametaphosphate---a common polyphosphate additive---and sodium silicate. We determined the concentration and size distribution of colloids (1--1000 nm) and nanoparticles (1--100 nm) using flow field-flow fractionation (FFF) with ultraviolet absorbance, multielement, and multiangle light scattering detectors. We also compare these data with measurements obtained from transmission electron micrographs. We find that both sequestrants yield stable iron nanoparticle suspensions with similar size distributions and that these particles associate with readily with lead.
+Here, we characterize the nanoparticulate iron released from corroding cast iron coupons into solutions containing commonly-used polyphosphate- and silicate-based sequestrants. We determined the concentration and size distribution of colloids (1--1000 nm) and nanoparticles (1--100 nm) using flow field-flow fractionation (FFF) with ultraviolet absorbance, multielement, and multiangle light scattering detectors. We also compare these data with measurements obtained from transmission electron micrographs. We find that both sequestrants yield stable iron nanoparticle suspensions with similar size distributions and that these particles associate readily with lead.
 
 # Methods  
 
@@ -231,7 +231,7 @@ At least 13 TEM images were acquired to represent each iron suspension, using a 
 
 ## Data analysis  
 
-We analyzed and presented the data using R version 4.2 [@r] and a collection of contributed packages [@tidyverse; @rmd; @rmd_book; @rmd_cbook; @ggtext]. Material necessary to reproduce the results is available on GitHub [@fff_mals] and functions for post-processing FFF data are available as a separate R package [@fffprocessr].
+We analyzed and presented the data using R version 4.2 [@r] and a collection of contributed packages [@tidyverse; @rmd; @rmd_book; @rmd_cbook; @ggtext; @here]. Material necessary to reproduce the results is available on GitHub [@fff_mals] and functions for post-processing FFF data are available as a separate R package [@fffprocessr].
 
 ### Peak fitting  
 
@@ -306,7 +306,7 @@ zimm_plot_in %>%
     data = function(x) distinct(x, date, sample, peak, plot_sample, rsq, max_y, max_x),
     aes(x = max_x, y = max_y, label = glue::glue("R^2~'='~{rsq}")),
     show.legend = FALSE, parse = TRUE,
-    alpha = .6, label.size = 0, nudge_x = -.2, nudge_y = -2e1, size = 2,
+    alpha = .6, label.size = 0, nudge_x = -.2, nudge_y = -2e1, size = 2.5,
     label.padding = unit(0.05, "lines"),
   ) +
   labs(
@@ -434,7 +434,7 @@ radii_text <- radii %>%
 source(here::here("R/peak_fits.R"))
 ```
 
-The estimated radii of gyration characterizing colloids in the primary and secondary peaks ranged from `r radii_text$min_100SiO2_1`--`r radii_text$max_100SiO2_1` and `r radii_text$min_100SiO2_2`--`r radii_text$max_100SiO2_2` nm in sodium silicate suspensions, and `r radii_text$min_3PP_1`--`r radii_text$max_3PP_1` and `r radii_text$min_3PP_2`--`r radii_text$max_3PP_2` nm in hexametaphosphate suspensions (Table \@ref(tab:table-radii)). While the maximum scattering intensities were similar between the two peaks, the second one accounted for an estimated 5%---or less---of the total iron concentration. This is explained by the much larger particle sizes represented in the secondary peak, and the dependence of scattering intensity on both particles concentration and size [@korgel_vesicle_1998; @baalousha_size_based_2006].
+The estimated radii of gyration characterizing colloids in the primary and secondary peaks ranged from `r radii_text$min_100SiO2_1`--`r radii_text$max_100SiO2_1` and `r radii_text$min_100SiO2_2`--`r radii_text$max_100SiO2_2` nm in sodium silicate suspensions, and `r radii_text$min_3PP_1`--`r radii_text$max_3PP_1` and `r radii_text$min_3PP_2`--`r radii_text$max_3PP_2` nm in hexametaphosphate suspensions (Table \@ref(tab:table-radii)). While the maximum scattering intensities were similar between the two peaks, the second one accounted for an estimated 5%---or less---of the total iron concentration. This is explained by the much larger particle sizes represented in the secondary peak, and the dependence of scattering intensity on both particle concentration and size [@korgel_vesicle_1998; @baalousha_size_based_2006].
 
 ```{r table-radii}
 radii %>% 
@@ -478,8 +478,11 @@ We identified `r paste(susp_summ$n, collapse = " and ")` particles in TEM images
 
 Since suspensions must be evaporated on a grid for TEM analysis, aggregates present in TEM images might be different from the larger particles identified by FFF-MALS. Still, there is an approximate correspondence between the equivalent spherical diameters obtained from light scattering data and the Feret distances estimated from TEM images, especially for the primary peak at a retention time of 34--35 minutes.
 
-```{r figure-image-j, fig.cap="Histograms representing particles identified in TEM images of sodium silicate and hexametaphosphate-stabilized iron suspensions.", fig.height=2}
+```{r figure-image-j, fig.cap="(a) Histograms representing particles identified in TEM images of sodium silicate and hexametaphosphate-stabilized iron suspensions. (b) A TEM image representing the sodium hexametaphosphate suspension. (c) A TEM image representing the sodium silicate suspension."}
+knitr::include_graphics(here::here("Rmarkdown/figures/fig-tem.png"))
+```
 
+```{r image-j-panel-a, eval=FALSE}
 image_j %>%
   mutate(susp = gsub("100Si", "100SiO2", susp)) %>% 
   left_join(sample_names, by = c("susp" = "sample")) %>% 
@@ -558,7 +561,7 @@ pdat %>%
 
 ```
 
-We integrated the ^31^P and ^57^Fe signals over each fractogram---excluding the focus period---to estimate the concentrations of each analyte. Then, we compared these estimates to the concentrations determined by direct ICP-MS quantification (i.e., no FFF). Recovery of ^57^Fe was `r recovery_text$percent_recovery_100Si_57Fe` $\pm$ `r recovery_text$sd_percent_recovery_100Si_57Fe` and `r recovery_text$percent_recovery_3PP_57Fe` $\pm$ `r recovery_text$sd_percent_recovery_3PP_57Fe`% in the sodium silicate and hexametaphosphate suspensions (Table \@ref(tab:table-recov)). While FFF recovered essentially all of the iron in sodium silicate suspensions, complexation by hexametaphosphate may have resulted in losses of iron to waste in separations of hexametaphosphate suspensions. And since recovery of P from a sodium hexametaphosphate standard was 111%, the partial P recovery from the iron oxide suspension suggests that hexametaphosphate hydrolyzed to orthophosphate or depolymerized to trimetaphosphate [@bell_hydrolysis_1947], species that readily pass through the FFF membrane to waste (Figure S1). The partial recovery of iron may be due to chelation by trimetaphosphate [@rasmussen_phosphate_1986], which would also escape retention by the membrane.  
+We integrated the ^31^P and ^57^Fe signals over each fractogram---excluding the focus period---to estimate the concentrations of each analyte. Then, we compared these estimates to the concentrations determined by direct ICP-MS quantification (i.e., no FFF). Recovery of ^57^Fe was `r recovery_text$percent_recovery_100Si_57Fe` and `r recovery_text$percent_recovery_3PP_57Fe` in the sodium silicate and hexametaphosphate suspensions (Table \@ref(tab:table-recov)). While FFF recovered essentially all of the iron in sodium silicate suspensions, complexation by hexametaphosphate may have resulted in losses of iron to waste in separations of hexametaphosphate suspensions. And since recovery of P from a sodium hexametaphosphate standard was 111%, the partial P recovery from the iron oxide suspension suggests that hexametaphosphate hydrolyzed to orthophosphate or depolymerized to trimetaphosphate [@bell_hydrolysis_1947], species that readily pass through the FFF membrane to waste (Figure S1). The partial recovery of iron may be due to chelation by trimetaphosphate [@rasmussen_phosphate_1986], which would also escape retention by the membrane.  
 
 ```{r table-recov}
 
@@ -601,9 +604,9 @@ fig_pb_in %>%
 ```
 
 
-Lead partitioned readily to suspended iron oxide colloids when added to the sodium silicate and hexametaphosphate suspensions (Figure \@ref(fig:figure-pb)), with variation in ^57^Fe explaining r^2^ = 99 and 93% of variation in ^208^Pb, respectively. The strong apparent relationship between iron and lead is consistent with much previous research documenting lead adsorption to iron (oxyhydr)oxides [@mckenzie_adsorption_1980; @xie_chapter_2007; @ainsworth_cobalt_1994], and more specifically, elevated lead in iron-rich drinking water [@li_impact_2020; @trueman_galvanic_2017; @trueman_understanding_2016; @masters_increased_2015; @mcfadden_contributions_2011; @deshommes_source_2010].
+Lead partitioned readily to suspended iron oxide colloids when added to the sodium silicate and hexametaphosphate suspensions (Figure \@ref(fig:figure-pb)), with variation in ^57^Fe explaining r^2^ = 99 and 93% of variation in ^208^Pb, respectively. The strong apparent relationship between iron and lead is consistent with much previous research documenting lead adsorption to iron (oxyhydr)oxides [@mckenzie_adsorption_1980; @xie_chapter_2007; @ainsworth_cobalt_1994] and, more specifically, elevated lead in iron-rich drinking water [@li_impact_2020; @trueman_galvanic_2017; @trueman_understanding_2016; @masters_increased_2015; @mcfadden_contributions_2011; @deshommes_source_2010].
 
-There was little evidence here, however, of lead complexation with hexametaphosphate; the primary ^31^P signal at a retention time of approximately 14 minutes did not co-occur with ^208^Pb. This suggests that lead interacts preferentially with iron oxide colloids over free hexametaphosphate. The colloids that result from iron corrosion in the presence of a sequestrant, then, may represent an effective transport vector for lead in drinking water. The preferential partitioning of lead to iron (oxyhydr)oxide colloids was reported in a recent paper, where a much larger fraction of total lead was associated with colloidal iron than colloidal dissolved organic matter, although both groups of colloids appeared to bind lead [@trueman_characterizing_2019]. In another study, a greater fraction of dissolved lead adsorbed to iron oxide particles than precipitated with orthophosphate [@shi_lead_2020]. 
+But there was little evidence here of lead complexation with hexametaphosphate; the primary ^31^P signal at a retention time of approximately 14 minutes did not co-occur with ^208^Pb. This suggests that lead interacts preferentially with iron oxide colloids over free hexametaphosphate. The colloids that result from iron corrosion in the presence of a sequestrant, then, may represent an effective transport vector for lead in drinking water. The preferential partitioning of lead to iron (oxyhydr)oxide colloids was reported in a recent paper, where a much larger fraction of total lead was associated with colloidal iron than colloidal dissolved organic matter, although both groups of colloids appeared to bind lead [@trueman_characterizing_2019]. In another study, a greater fraction of dissolved lead adsorbed to iron oxide particles than precipitated with orthophosphate [@shi_lead_2020]. 
 
 ```{r figure-pb, fig.cap="Fractograms representing duplicate sodium silicate and hexametaphosphate suspensions; each is paired with an equivalent suspension dosed with 200 µg Pb L^-1^. Light scattering and absorbance fractograms are displayed as the raw detector responses.", fig.height=4}
 
@@ -627,7 +630,7 @@ This transport mechanism has important implications for drinking water quality: 
 
 # Conclusion  
 
-Sodium silicate and sodium hexametaphosphate formed nanoparticulate suspensions of iron (oxyhydr)oxide in the presence of a corroding iron surface. The size distribution of the two suspensions was similar, and particle size estimates obtained from light scattering data agreed reasonably well with those determined by TEM image analysis. Lead partitioned preferentially to iron particles over free hexametaphosphate, suggesting that the particles represent an effective transport vector for lead, and possibly for other heavy metals. This highlights a risk associated with sequestrant use in drinking water treatment: sequestrants---even those that do not form complexes with lead---may generate colloids that provide an important mobile sink for lead, potentially increasing human exposure.
+Sodium silicate and sodium hexametaphosphate solutions yielded nanoparticulate suspensions of iron (oxyhydr)oxide when exposed to a corroding iron surface. The size distributions of the two suspensions were similar, and particle size estimates obtained from light scattering data agreed reasonably well with those determined by TEM image analysis. Lead appeared to bind to iron nanoparticles, and in the sodium hexametaphosphate suspension it interacted preferentially with iron over free hexametaphosphate. Our findings highlight a risk associated with sequestrant use in drinking water treatment: sequestrants---even those that do not form complexes with lead---may generate colloids that provide an important mobile sink for lead, potentially increasing human exposure.
 
 # Acknowledgments 
 
