--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -804,3 +804,72 @@
     note = {R package version 1.0.1},
     url = {https://CRAN.R-project.org/package=here},
   }
+  
+
+@article{holm_metaphosphate_2003,
+	title = {Metaphosphate reversion in {Laboratory} and {Pipe}-{Rig} {Experiments}},
+	volume = {95},
+	issn = {0003150X},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/j.1551-8833.2003.tb10343.x},
+	doi = {10.1002/j.1551-8833.2003.tb10343.x},
+	language = {en},
+	number = {4},
+	urldate = {2022-08-05},
+	journal = {Journal - American Water Works Association},
+	author = {Holm, Thomas R. and Edwards, Marc},
+	month = apr,
+	year = {2003},
+	pages = {172--178},
+}
+
+
+@article{lytle_lead_2020,
+	title = {Lead {Particle} {Size} {Fractionation} and {Identification} in {Newark}, {New} {Jersey}’s {Drinking} {Water}},
+	volume = {54},
+	issn = {0013-936X, 1520-5851},
+	url = {https://pubs.acs.org/doi/10.1021/acs.est.0c03797},
+	doi = {10.1021/acs.est.0c03797},
+	language = {en},
+	number = {21},
+	urldate = {2020-11-12},
+	journal = {Environmental Science \& Technology},
+	author = {Lytle, Darren A. and Schock, Michael R. and Formal, Casey and Bennett-Stamper, Christina and Harmon, Stephen and Nadagouda, Mallikarjuna N. and Williams, Daniel and DeSantis, Michael K. and Tully, Jennifer and Pham, Maily},
+	month = nov,
+	year = {2020},
+	pages = {13672--13679},
+}
+
+
+@article{pan_lead_2021,
+	title = {Lead {Phosphate} {Particles} in {Tap} {Water}: {Challenges} for {Point}-of-{Use} {Filters}},
+	volume = {8},
+	issn = {2328-8930, 2328-8930},
+	shorttitle = {Lead {Phosphate} {Particles} in {Tap} {Water}},
+	url = {https://pubs.acs.org/doi/10.1021/acs.estlett.1c00055},
+	doi = {10.1021/acs.estlett.1c00055},
+	language = {en},
+	number = {3},
+	urldate = {2022-08-05},
+	journal = {Environmental Science \& Technology Letters},
+	author = {Pan, Weiyi and Johnson, Elizabeth R. and Giammar, Daniel E.},
+	month = mar,
+	year = {2021},
+	pages = {244--249},
+}
+
+
+@article{purchase_understanding_2020,
+	title = {Understanding {Failure} {Modes} of {NSF}/{ANSI} 53 {Lead}-{Certified} {Point}-of-{Use} {Pitcher} and {Faucet} {Filters}},
+	issn = {2328-8930, 2328-8930},
+	url = {https://pubs.acs.org/doi/10.1021/acs.estlett.0c00709},
+	doi = {10.1021/acs.estlett.0c00709},
+	language = {en},
+	urldate = {2021-01-04},
+	journal = {Environmental Science \& Technology Letters},
+	author = {Purchase, Jeannie M. and Rouillier, Rusty and Pieper, Kelsey J. and Edwards, Marc},
+	month = dec,
+	year = {2020},
+	pages = {acs.estlett.0c00709},
+	file = {Full Text:/Users/cwrs/Zotero/storage/43QWFPCV/Purchase et al. - 2020 - Understanding Failure Modes of NSFANSI 53 Lead-Ce.pdf:application/pdf},
+}
+
